Fix alignment cosmetic issue in dropdown buttons.

--- a/src/themes/Emerald/css/combobox.css
+++ b/src/themes/Emerald/css/combobox.css
@@ -1,3 +1,3 @@
 .ui-combobox { margin: 0 7px 0 0; }
-.ui-combobox .ui-autocomplete-input { padding: .4em .4em .5em .4em; width: 20em; }
+.ui-combobox .ui-autocomplete-input { padding: .4em .4em .5em .4em; width: 20em; text-align: left !important; }
 .ui-combobox .ui-button { margin: 0 !important; }
